--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,12 +27,17 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
 
-
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    // Card View
+    implementation 'androidx.cardview:cardview:1.0.0'
+
+    // Design
+    implementation 'com.google.android.material:material:1.0.0'
 
     // Bottom Navigation
     implementation 'com.etebarian:meow-bottom-navigation-java:1.2.0'
